# mod_surrealdb

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile.debian  Dockerfile.debian9  LICENSE  README  history.txt  mod_surrealdb.c
cmd/surreal_commands_worker/: Cargo.toml
cmd/surreal_commands_worker/src/: main.rs
conf/autoload_configs/: surrealdb.conf.xml
docs/: BUILD.md  commands.md  quickstart.md
examples/: Makefile  ffi_c_example.c  ffi_sub_example.c  mod_surrealdb.env
include/: surrealdb_ffi.h
scripts/: build-deb.sh  docker-build-deb-stretch.sh  docker-build-deb.sh  install-ffi.sh  install-module.sh  surreal_commands_worker.py
surrealdb_ffi/: Cargo.toml  cbindgen.toml
surrealdb_ffi/src/: lib.rs
