[package]
name = "surrealdb_ffi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "C ABI wrapper around SurrealDB v3 client for FreeSWITCH modules"

[lib]
crate-type = ["cdylib"]

[features]
default = ["stub"]
stub = []
real = ["dep:surrealdb", "dep:tokio", "dep:serde_json"]

[dependencies]
# Real client deps are optional and activated by the `real` feature.
surrealdb = { version = "1", default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]
# Optional: generate headers automatically
# cbindgen = "0.26"
